# Project

./: .gitignore  render.yaml
.cursor/: mcp.json
backend/: .env.example  .gitignore  ARCHITECTURE.md  Procfile  init_db.py  main.py  requirements.txt  reset_public_schema.py  run_asgi_combined.bat  run_dev.bat
backend/api/: views.py
backend/config/: asgi.py  settings.py
backend/docs/: API_ENDPOINTS.md
backend/fastapi_service/: database.py  main.py  migrate_sqlite.py  models.py  models_extended.py  schemas.py  schemas_auth.py  schemas_extended.py  schemas_farmer.py  schemas_ledger.py  schemas_outflow.py  seed_auth.py  seed_extended.py  seed_inflow.py  seed_ledger.py  seed_outflow.py  seed_pf_categories.py  seed_pf_demo_user.py  seed_procurement.py  sql_compat.py
backend/fastapi_service/api/: __init__.py
backend/fastapi_service/constants/: finance_account_types.py
backend/sql/: 001_postgres_erp_blueprint.sql  002_dashboard_queries.sql  003_finance_investments_v2.sql  004_loans_enhancement.sql  005_liabilities_industry.sql  006_fixed_assets_industry.sql  007_super_admin_auth.sql  008_performance_indexes_postgres.sql  009_account_transfers.sql  010_loan_emi_method.sql  011_liability_emi_schedule.sql  012_credit_cards.sql  013_finance_account_types.sql  014_investments_market_value_sip.sql  015_finance_investment_ledger.sql
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.webmanifest
frontend/src/: App.jsx  AppErrorBoundary.jsx  index.css
mcp-db/: pyproject.toml  requirements.txt  server.py
(+324 files in other folders)
